--- a/codes/데이터 전처리/hyein_total_preprocess.ipynb
+++ b/codes/데이터 전처리/hyein_total_preprocess.ipynb
@@ -2546,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "ac2225a7-2692-417a-b0f1-9100e9043770",
    "metadata": {
     "tags": []
@@ -2616,19 +2616,19 @@
        "4                 ㅡㅡ              별로에요"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_replacewords = pd.read_excel('../../datasets/replace_concat.csv.xlsx')\n",
+    "df_replacewords = pd.read_excel('../../datasets/replace_concat.xlsx')\n",
     "df_replacewords[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "95ae184f-52ce-48ca-adcf-7029f0b3e2db",
    "metadata": {
     "tags": []
@@ -2637,15 +2637,14 @@
    "source": [
     "# 유사어 대치 함수\n",
     "def replace_word(tokenized_review):\n",
-    "    replaced_review = list()\n",
+    "    replaced_review = tokenized_review\n",
     "    for i in range(len(df_replacewords['before_replacement'])):\n",
     "        try:\n",
     "            # 치환할 단어 있는 경우에만 데이터 치환 수행\n",
-    "            if type(tokenized_review) == str and df_replacewords['before_replacement'][i] in tokenized_review:\n",
-    "                replaced_review = df_replacewords['after_replacement'][i]\n",
+    "            # if type(tokenized_review) == str and df_replacewords['before_replacement'][i] in tokenized_review:\n",
+    "            if df_replacewords['before_replacement'][i] in tokenized_review:\n",
+    "                replaced_review = replaced_review.replace(df_replacewords['before_replacement'][i], df_replacewords['after_replacement'][i])\n",
     "            # 치환할 단어가 없는 경우에는 그대로 뱉어냄\n",
-    "            else :\n",
-    "                replaced_review = tokenized_review\n",
     "        except Exception as e:\n",
     "            # print(f\"Error 발생 / 에러명: {e}\")\n",
     "            pass\n",
@@ -2654,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "id": "c51b9f7f-c22d-45f1-ab20-99a1110c726f",
    "metadata": {
     "tags": []
@@ -2663,10 +2662,10 @@
     {
      "data": {
       "text/plain": [
-       "'아이코젠 운동 선생님 쌤 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 사용지점이 많아서 출장이나 본가에 가게되도 지속적으로 쓸수있는점이 짱이예요! 라이프 코스도 같이 이용중인데 덕분에 카페이용비가 확 낮아졌어요 완전 대박 😀😀'"
+       "'아이코젠 운동 강사님 강사님 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 사용지점이 많아서 출장이나 본가에 가게되도 지속적으로 쓸수있는점이 짱이예요! 라이프 코스도 같이 사용중인데 덕분에 카페사용비가 확 낮아졌어요 완전 대박 좋아요좋아요'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2813,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "10c27de2-455d-4da5-af3c-ac1ef27da3c2",
    "metadata": {
     "tags": []
@@ -2870,19 +2869,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>706</th>\n",
-       "      <td>잇따라</td>\n",
+       "      <td>입장방식은</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>707</th>\n",
-       "      <td>있고</td>\n",
+       "      <td>잇따라</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>708</th>\n",
-       "      <td>있는</td>\n",
+       "      <td>있고</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>709</th>\n",
-       "      <td>있다</td>\n",
+       "      <td>있는</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2896,26 +2895,26 @@
        "703  임에 틀림없다\n",
        "704     입각하여\n",
        "705      입니다\n",
-       "706      잇따라\n",
-       "707       있고\n",
-       "708       있는\n",
-       "709       있다"
+       "706    입장방식은\n",
+       "707      잇따라\n",
+       "708       있고\n",
+       "709       있는"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 불용어 사전 불러오기\n",
-    "df_stopwords = pd.read_excel('../../datasets/stopword_concat.csv.xlsx')\n",
+    "df_stopwords = pd.read_excel('../../datasets/stopword_concat.xlsx')\n",
     "df_stopwords[700:710]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "59970e47-5acc-4fb4-b06a-2b38a9ac093d",
    "metadata": {
     "tags": []
@@ -2979,14 +2978,14 @@
        "4                날"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 한단어 사전 불러오기\n",
-    "df_onewords = pd.read_excel('../../datasets/한단어_concat.xlsx')\n",
+    "df_onewords = pd.read_excel('../../datasets/oneword_concat.xlsx')\n",
     "df_onewords[:5]"
    ]
   },
