--- a/codes/데이터 전처리/hyein_total_preprocess.ipynb
+++ b/codes/데이터 전처리/hyein_total_preprocess.ipynb
@@ -253,6 +253,10 @@
    "execution_count": 7,
    "id": "a21ac18d-e18b-4836-a12a-bc94590e8048",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -289,21 +293,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db25da31-b87f-4e99-bd29-b55bf9e12fc3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from konlpy.tag import Komoran\n",
-    "komoran = Komoran()\n",
-    "from mecab import MeCab\n",
-    "mecab = MeCab()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "3db69728-0c2c-4f3e-808f-ec0fdadca89e",
    "metadata": {
@@ -311,8 +300,8 @@
    },
    "outputs": [],
    "source": [
-    "from konlpy.tag import Komoran\n",
-    "komoran = Komoran()\n",
+    "# from konlpy.tag import Komoran\n",
+    "# komoran = Komoran()\n",
     "from mecab import MeCab\n",
     "mecab = MeCab()"
    ]
@@ -2667,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "id": "95ae184f-52ce-48ca-adcf-7029f0b3e2db",
    "metadata": {
     "tags": []
@@ -2684,8 +2673,6 @@
     "            if df_replacewords['before_replacement'][i] in replaced_review:\n",
     "                replaced_review = replaced_review.replace(df_replacewords['before_replacement'][i], df_replacewords['after_replacement'][i])\n",
     "            # 치환할 단어가 없는 경우에는 그대로 뱉어냄\n",
-    "            else :\n",
-    "                replaced_review = tokenized_review\n",
     "        except Exception as e:\n",
     "            # print(f\"Error 발생 / 에러명: {e}\")\n",
     "            pass\n",
@@ -2694,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "id": "c51b9f7f-c22d-45f1-ab20-99a1110c726f",
    "metadata": {
     "tags": []
@@ -2703,10 +2690,10 @@
     {
      "data": {
       "text/plain": [
-       "'샘 쌤 선생님 입장 방식 은 변경 됐 는데 앱은 여전히 바코드 만 보여집니다 . 짐 에서 는 더 이상 바코드 스캔 이 아닌 어 플 에서 입장 하 기 로 바뀌 어 사용 치 못 하 고 있 습니다 . 매달 이용료 는 나가 고 있 는 상황 이 면 고쳐 지 기 전 까지 이 용못 했 던 일자 에 대해 보상 처리 는 되 나요 ? 어 플 을 지웠 다 다시 다운 받 아 봐도 똑같 은 상태 입니다 . 도대체 언제 부터 전 사용 가능 한가요 ?'"
+       "'강사님 강사님 강사님 입장 방식 은 수정 됐 는데 사이트은 여전히 바코드 만 보여집니다 . 운동시설 에서 는 더 이상 바코드 스캔 이 아닌 어 플 에서 입장 하 기 로 바뀌 어 사용 치 못 하 고 있 습니다 . 매달 사용료 는 나가 고 있 는 상황 이 면 고쳐 지 기 전 까지 이 용못 했 던 일자 에 대해 보상 처리 는 되 나요 ? 어 플 을 지웠 다 다시 다운 받 아 봐도 똑같 은 상태 입니다 . 도대체 언제 부터 전 사용 가능 한가요 ?'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2718,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "id": "c7196d52-d085-41b2-9029-5403b5214290",
    "metadata": {
     "tags": []
@@ -2745,71 +2732,83 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>_id</th>\n",
        "      <th>name</th>\n",
        "      <th>reviews</th>\n",
        "      <th>stars</th>\n",
        "      <th>tokenized_review</th>\n",
        "      <th>replaced_review</th>\n",
+       "      <th>preprocess_review</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>651277e7ddb81e8e96c6bcbb</td>\n",
        "      <td>Google 사용자</td>\n",
        "      <td>입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...</td>\n",
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
        "      <td>입장 방식 은 변경 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 짐 에서 는...</td>\n",
-       "      <td>입장 방식 은 변경 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 짐 에서 는...</td>\n",
+       "      <td>입장 방식 은 수정 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 운동시설 에...</td>\n",
+       "      <td>입장 방식 변경 플 바코드 만 짐 바코드 스캔 플 입장 이용료 상황 전 용못 일자 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>651277e7ddb81e8e96c6bcbc</td>\n",
        "      <td>Google 사용자</td>\n",
        "      <td>정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...</td>\n",
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
        "      <td>정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...</td>\n",
        "      <td>정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...</td>\n",
+       "      <td>프로 신뢰 시설 선택 목록 말 업 문제 은행 로그인 타임아웃 적용 불편 감수 적용 ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>651277e7ddb81e8e96c6bcbd</td>\n",
        "      <td>Google 사용자</td>\n",
        "      <td>입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...</td>\n",
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
        "      <td>입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...</td>\n",
        "      <td>입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...</td>\n",
+       "      <td>입장 시설 검색 곳 입장 기존 앱 업데이트 후 로그인 위치 자동 검색 시설 수동 검...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>651277e7ddb81e8e96c6bcbe</td>\n",
        "      <td>한반도</td>\n",
        "      <td>평소 이동이 잦고 여러장소에서 운동하는걸 좋아하는 저에게는 합리적인 아이코젠이 정말...</td>\n",
        "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
        "      <td>평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...</td>\n",
        "      <td>평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...</td>\n",
+       "      <td>이동 장소 운동 걸 합리 코젠 제휴 업체 추가 업체 방문 게 낙 입장 방식 도 바코...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>651277e7ddb81e8e96c6bcbf</td>\n",
        "      <td>나수인</td>\n",
        "      <td>아이코젠 덕분에 운동이 더 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 ...</td>\n",
        "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
        "      <td>아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...</td>\n",
        "      <td>아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...</td>\n",
+       "      <td>아이코 젠 덕분 운동 기록 지점 출장 본가 지속 수 점 짱 라이프 코스 이용 중 덕...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        _id        name  \\\n",
-       "0  651277e7ddb81e8e96c6bcbb  Google 사용자   \n",
-       "1  651277e7ddb81e8e96c6bcbc  Google 사용자   \n",
-       "2  651277e7ddb81e8e96c6bcbd  Google 사용자   \n",
-       "3  651277e7ddb81e8e96c6bcbe         한반도   \n",
-       "4  651277e7ddb81e8e96c6bcbf         나수인   \n",
+       "   Unnamed: 0                       _id        name  \\\n",
+       "0           0  651277e7ddb81e8e96c6bcbb  Google 사용자   \n",
+       "1           1  651277e7ddb81e8e96c6bcbc  Google 사용자   \n",
+       "2           2  651277e7ddb81e8e96c6bcbd  Google 사용자   \n",
+       "3           3  651277e7ddb81e8e96c6bcbe         한반도   \n",
+       "4           4  651277e7ddb81e8e96c6bcbf         나수인   \n",
        "\n",
        "                                             reviews                 stars  \\\n",
        "0  입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...  별표 5개 만점에 1개를 받았습니다.   \n",
@@ -2825,15 +2824,22 @@
        "3  평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...   \n",
        "4  아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...   \n",
        "\n",
-       "                                     replaced_review  \n",
-       "0  입장 방식 은 변경 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 짐 에서 는...  \n",
-       "1  정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...  \n",
-       "2  입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...  \n",
-       "3  평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...  \n",
-       "4  아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...  "
+       "                                     replaced_review  \\\n",
+       "0  입장 방식 은 수정 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 운동시설 에...   \n",
+       "1  정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...   \n",
+       "2  입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...   \n",
+       "3  평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...   \n",
+       "4  아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...   \n",
+       "\n",
+       "                                   preprocess_review  \n",
+       "0  입장 방식 변경 플 바코드 만 짐 바코드 스캔 플 입장 이용료 상황 전 용못 일자 ...  \n",
+       "1  프로 신뢰 시설 선택 목록 말 업 문제 은행 로그인 타임아웃 적용 불편 감수 적용 ...  \n",
+       "2  입장 시설 검색 곳 입장 기존 앱 업데이트 후 로그인 위치 자동 검색 시설 수동 검...  \n",
+       "3  이동 장소 운동 걸 합리 코젠 제휴 업체 추가 업체 방문 게 낙 입장 방식 도 바코...  \n",
+       "4  아이코 젠 덕분 운동 기록 지점 출장 본가 지속 수 점 짱 라이프 코스 이용 중 덕...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2853,7 +2859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "id": "10c27de2-455d-4da5-af3c-ac1ef27da3c2",
    "metadata": {
     "tags": []
@@ -2910,19 +2916,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>706</th>\n",
-       "      <td>잇따라</td>\n",
+       "      <td>입장방식은</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>707</th>\n",
-       "      <td>있고</td>\n",
+       "      <td>잇따라</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>708</th>\n",
-       "      <td>있는</td>\n",
+       "      <td>있고</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>709</th>\n",
-       "      <td>있다</td>\n",
+       "      <td>있는</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2936,26 +2942,26 @@
        "703  임에 틀림없다\n",
        "704     입각하여\n",
        "705      입니다\n",
-       "706      잇따라\n",
-       "707       있고\n",
-       "708       있는\n",
-       "709       있다"
+       "706    입장방식은\n",
+       "707      잇따라\n",
+       "708       있고\n",
+       "709       있는"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 불용어 사전 불러오기\n",
-    "df_stopwords = pd.read_excel('../../datasets/stopword_concat.csv.xlsx')\n",
+    "df_stopwords = pd.read_excel('../../datasets/stopword_concat.xlsx')\n",
     "df_stopwords[700:710]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "id": "59970e47-5acc-4fb4-b06a-2b38a9ac093d",
    "metadata": {
     "tags": []
@@ -3019,14 +3025,14 @@
        "4                날"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 한단어 사전 불러오기\n",
-    "df_onewords = pd.read_excel('../../datasets/한단어_concat.xlsx')\n",
+    "df_onewords = pd.read_excel('../../datasets/oneword_concat.xlsx')\n",
     "df_onewords[:5]"
    ]
   },
