--- a/codes/데이터 전처리/hyein_total_preprocess.ipynb
+++ b/codes/데이터 전처리/hyein_total_preprocess.ipynb
@@ -3016,6 +3016,10 @@
    "execution_count": 67,
    "id": "c17e5425-faa6-459c-86ed-0b430db9bb84",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
