--- a/codes/데이터 수집/geosan_googlestore_scrapping.ipynb
+++ b/codes/데이터 수집/geosan_googlestore_scrapping.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "import time"
+    "import time\n",
+    "#시작"
    ]
   },
   {
