--- a/codes/데이터 수집/hyein_국민PT_scrapping.ipynb
+++ b/codes/데이터 수집/hyein_국민PT_scrapping.ipynb
@@ -10,7 +10,8 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "import time"
+    "import time\n",
+    "# 브라우져"
    ]
   },
   {
