--- a/codes/데이터 전처리/hyein_total_preprocess.ipynb
+++ b/codes/데이터 전처리/hyein_total_preprocess.ipynb
@@ -2705,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 100,
    "id": "c7196d52-d085-41b2-9029-5403b5214290",
    "metadata": {
     "tags": []
@@ -2752,7 +2752,7 @@
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
        "      <td>입장 방식 은 변경 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 짐 에서 는...</td>\n",
        "      <td>입장 방식 은 수정 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 운동시설 에...</td>\n",
-       "      <td>입장 방식 변경 플 바코드 만 짐 바코드 스캔 플 입장 이용료 상황 전 용못 일자 ...</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2763,7 +2763,7 @@
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
        "      <td>정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...</td>\n",
        "      <td>정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...</td>\n",
-       "      <td>프로 신뢰 시설 선택 목록 말 업 문제 은행 로그인 타임아웃 적용 불편 감수 적용 ...</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2774,29 +2774,7 @@
        "      <td>별표 5개 만점에 1개를 받았습니다.</td>\n",
        "      <td>입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...</td>\n",
        "      <td>입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...</td>\n",
-       "      <td>입장 시설 검색 곳 입장 기존 앱 업데이트 후 로그인 위치 자동 검색 시설 수동 검...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>651277e7ddb81e8e96c6bcbe</td>\n",
-       "      <td>한반도</td>\n",
-       "      <td>평소 이동이 잦고 여러장소에서 운동하는걸 좋아하는 저에게는 합리적인 아이코젠이 정말...</td>\n",
-       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
-       "      <td>평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...</td>\n",
-       "      <td>평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...</td>\n",
-       "      <td>이동 장소 운동 걸 합리 코젠 제휴 업체 추가 업체 방문 게 낙 입장 방식 도 바코...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>651277e7ddb81e8e96c6bcbf</td>\n",
-       "      <td>나수인</td>\n",
-       "      <td>아이코젠 덕분에 운동이 더 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 ...</td>\n",
-       "      <td>별표 5개 만점에 5개를 받았습니다.</td>\n",
-       "      <td>아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...</td>\n",
-       "      <td>아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...</td>\n",
-       "      <td>아이코 젠 덕분 운동 기록 지점 출장 본가 지속 수 점 짱 라이프 코스 이용 중 덕...</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2807,46 +2785,31 @@
        "0           0  651277e7ddb81e8e96c6bcbb  Google 사용자   \n",
        "1           1  651277e7ddb81e8e96c6bcbc  Google 사용자   \n",
        "2           2  651277e7ddb81e8e96c6bcbd  Google 사용자   \n",
-       "3           3  651277e7ddb81e8e96c6bcbe         한반도   \n",
-       "4           4  651277e7ddb81e8e96c6bcbf         나수인   \n",
        "\n",
        "                                             reviews                 stars  \\\n",
        "0  입장방식은 변경됐는데 어플은 여전히 바코드만 보여집니다. 짐에서는 더이상 바코드스캔...  별표 5개 만점에 1개를 받았습니다.   \n",
        "1  정말 답답하네요 하나. GPS 100프로 신뢰하나요? 시설선택목록에서 안보임 4월말...  별표 5개 만점에 1개를 받았습니다.   \n",
        "2  입장하려다 시설검색이 안되서 결국 다른곳에 입장했습니다. 기존에 잘 쓰던 앱이 업데...  별표 5개 만점에 1개를 받았습니다.   \n",
-       "3  평소 이동이 잦고 여러장소에서 운동하는걸 좋아하는 저에게는 합리적인 아이코젠이 정말...  별표 5개 만점에 5개를 받았습니다.   \n",
-       "4  아이코젠 덕분에 운동이 더 즐겁고 꾸준하게 하게 되었어요. 사용기록이 꼼꼼히 남고 ...  별표 5개 만점에 5개를 받았습니다.   \n",
        "\n",
        "                                    tokenized_review  \\\n",
        "0  입장 방식 은 변경 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 짐 에서 는...   \n",
        "1  정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...   \n",
        "2  입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...   \n",
-       "3  평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...   \n",
-       "4  아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...   \n",
        "\n",
-       "                                     replaced_review  \\\n",
-       "0  입장 방식 은 수정 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 운동시설 에...   \n",
-       "1  정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...   \n",
-       "2  입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...   \n",
-       "3  평소 이동 이 잦 고 여러 장소 에서 운동 하 는 걸 좋 아 하 는 저 에게 는 합...   \n",
-       "4  아이코 젠 덕분 에 운동 이 더 즐겁 고 꾸준 하 게 하 게 되 었 어요 . 사용 ...   \n",
-       "\n",
-       "                                   preprocess_review  \n",
-       "0  입장 방식 변경 플 바코드 만 짐 바코드 스캔 플 입장 이용료 상황 전 용못 일자 ...  \n",
-       "1  프로 신뢰 시설 선택 목록 말 업 문제 은행 로그인 타임아웃 적용 불편 감수 적용 ...  \n",
-       "2  입장 시설 검색 곳 입장 기존 앱 업데이트 후 로그인 위치 자동 검색 시설 수동 검...  \n",
-       "3  이동 장소 운동 걸 합리 코젠 제휴 업체 추가 업체 방문 게 낙 입장 방식 도 바코...  \n",
-       "4  아이코 젠 덕분 운동 기록 지점 출장 본가 지속 수 점 짱 라이프 코스 이용 중 덕...  "
+       "                                     replaced_review preprocess_review  \n",
+       "0  입장 방식 은 수정 됐 는데 어 플 은 여전히 바코드 만 보여집니다 . 운동시설 에...                    \n",
+       "1  정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 ...                    \n",
+       "2  입장 하 려다 시설 검색 이 안 되 서 결국 다른 곳 에 입장 했 습니다 . 기존 ...                    "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['replaced_review'] = df['tokenized_review'].apply(replace_word)\n",
-    "df[:5]"
+    "df[:3]"
    ]
   },
   {
@@ -3041,7 +3004,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
+   "id": "3b4aa4b5-27a2-41c9-a6d6-d395e517d9fe",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 에서 안 보임 4 월 말 업 뎃 이후 문제 임 둘 . 은행 도 아닌데 로그인 타임아웃 적용 하 나요 ? 어디 까지 사용 자 불편 을 감수 하 면서 가 실려고 . . 셋 . 충분 하 게 Test 하 고 업 뎃 적용 하 시 는지 ? 근래 며칠 이 멀 다 화면 이 바뀌 는데 순전 관리 용 이 지 고객 은 안중 에 도 없 어 보임 뭐 에 쫒기 듯 어설프 다'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['tokenized_review'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "id": "9a88b7d9-22d7-468d-8f92-bd8d47bb76ae",
    "metadata": {
     "tags": []
@@ -3051,41 +3037,43 @@
     "stopwords = df_stopwords['stopword'].values\n",
     "onewords = df_onewords['one_char_keyword'].values\n",
     "\n",
+    "from konlpy.tag import Okt\n",
+    "okt = O\n",
     "# 불용어, 한단어 처리 함수\n",
-    "def remove_words(words, stopword=stopwords, oneword=onewords):\n",
+    "def remove_words(raw, pos=[\"Noun\",'Adjective',\"Alpha\",\"Verb\",\"Number\"], stopword=stopwords):\n",
     "    result_list = list()\n",
-    "    try : \n",
-    "        for word in words:\n",
-    "            if word not in stopword:\n",
-    "                if len(word) == 1 and word in oneword:\n",
-    "                    result_list.append(word)\n",
-    "    except:\n",
-    "        pass\n",
+    "    for word, tag in mecab.pos(raw, norm=True, stem=True) :\n",
+    "        if len(word) > 1 and tag in pos and word not in stopword:\n",
+    "            result_list.append(word)\n",
+    "        elif len(word) == 1 and word in oneword:\n",
+    "            result_list.append(word)\n",
     "    return ' '.join(result_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 132,
    "id": "5399a4b8-ab4a-4917-9144-ec757292ee5f",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'값 꿈 꿀 끝 날'"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "MeCab.pos() got an unexpected keyword argument 'norm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[132], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 확인\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m remove_words(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m값 꿀 꿈 끝 날 거니와 개의치않고 가 가까스로 가령 가민 개의치않고 정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 에서 안 보임 4 월 말 업 뎃 이후 문제 임 둘 . 은행 도 아닌데 로그인 타임아웃 적용 하 나요 ? 어디 까지 사용 자 불편 을 감수 하 면서 가 실려고 . . 셋 . 충분 하 게 Test 하 고 업 뎃 적용 하 시 는지 ? 근래 며칠 이 멀 다 화면 이 바뀌 는데 순전 관리 용 이 지 고객 은 안중 에 도 없 어 보임 뭐 에 쫒기 듯 어설프 다\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[131], line 7\u001b[0m, in \u001b[0;36mremove_words\u001b[1;34m(raw, pos, stopword)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mremove_words\u001b[39m(raw, pos\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNoun\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAdjective\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlpha\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVerb\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber\u001b[39m\u001b[38;5;124m\"\u001b[39m], stopword\u001b[38;5;241m=\u001b[39mstopwords):\n\u001b[0;32m      6\u001b[0m     result_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m word, tag \u001b[38;5;129;01min\u001b[39;00m mecab\u001b[38;5;241m.\u001b[39mpos(raw, norm\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, stem\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) :\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(word) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m tag \u001b[38;5;129;01min\u001b[39;00m pos \u001b[38;5;129;01mand\u001b[39;00m word \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m stopword:\n\u001b[0;32m      9\u001b[0m             result_list\u001b[38;5;241m.\u001b[39mappend(word)\n",
+      "\u001b[1;31mTypeError\u001b[0m: MeCab.pos() got an unexpected keyword argument 'norm'"
+     ]
     }
    ],
    "source": [
     "# 확인\n",
-    "remove_words('개의치않고 값 꿈 꿀 끝 날 앙 팡 불용어 운동시설 사전 처리 확인합니다.')"
+    "remove_words('값 꿀 꿈 끝 날 거니와 개의치않고 가 가까스로 가령 가민 개의치않고 정말 답답 하 네요 하나 . GPS 100 프로 신뢰 하 나요 ? 시설 선택 목록 에서 안 보임 4 월 말 업 뎃 이후 문제 임 둘 . 은행 도 아닌데 로그인 타임아웃 적용 하 나요 ? 어디 까지 사용 자 불편 을 감수 하 면서 가 실려고 . . 셋 . 충분 하 게 Test 하 고 업 뎃 적용 하 시 는지 ? 근래 며칠 이 멀 다 화면 이 바뀌 는데 순전 관리 용 이 지 고객 은 안중 에 도 없 어 보임 뭐 에 쫒기 듯 어설프 다')"
    ]
   },
   {
