--- a/codes/LDA/hyein_LDA.ipynb
+++ b/codes/LDA/hyein_LDA.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "b18463c0-b119-41a8-a917-5e55bd824a0e",
    "metadata": {
     "tags": []
@@ -443,23 +443,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2878 entries, 0 to 2877\n",
+      "Index: 2850 entries, 0 to 2877\n",
       "Data columns (total 7 columns):\n",
       " #   Column             Non-Null Count  Dtype \n",
       "---  ------             --------------  ----- \n",
-      " 0   _id                2878 non-null   object\n",
-      " 1   name               2878 non-null   object\n",
-      " 2   reviews            2878 non-null   object\n",
-      " 3   tokenized_review   2878 non-null   object\n",
-      " 4   replaced_review    2878 non-null   object\n",
+      " 0   _id                2850 non-null   object\n",
+      " 1   name               2850 non-null   object\n",
+      " 2   reviews            2850 non-null   object\n",
+      " 3   tokenized_review   2850 non-null   object\n",
+      " 4   replaced_review    2850 non-null   object\n",
       " 5   preprocess_review  2850 non-null   object\n",
-      " 6   classification     2878 non-null   object\n",
+      " 6   classification     2850 non-null   object\n",
       "dtypes: object(7)\n",
-      "memory usage: 157.5+ KB\n"
+      "memory usage: 178.1+ KB\n"
      ]
     }
    ],
    "source": [
+    "# null값 확인\n",
     "df.info()"
    ]
   },
@@ -605,12 +606,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "b3b407ad-8752-4048-a5cf-0d63eec794e6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 긍정 / 부정 분리\n",
+    "positive_list = list(df[df['classification'] == '긍정']['classification'])\n",
+    "negative_list = list(df[df['classification'] == '부정']['classification'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "05497606-553c-4489-9430-61387c4b375d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2218, 632)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(positive_list), len(negative_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "18af15c6-c7df-440e-b707-78d777989ef8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from gensim.corpora import Dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "43b41638-c467-4d90-b161-5bc7df7f1a9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gensim.corpora import Dictionary \n",
+    "\n",
     "from gensim.models import LdaModel\n",
     "import gensim"
    ]
