--- a/codes/LDA/hyein_LDA.ipynb
+++ b/codes/LDA/hyein_LDA.ipynb
@@ -642,30 +642,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "18af15c6-c7df-440e-b707-78d777989ef8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from gensim.corpora import Dictionary "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43b41638-c467-4d90-b161-5bc7df7f1a9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from gensim.models import LdaModel\n",
-    "import gensim"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "87490710-083b-4f95-bfad-df776b85a475",
    "metadata": {},
@@ -675,11 +651,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "18af15c6-c7df-440e-b707-78d777989ef8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from gensim.corpora import Dictionary\n",
+    "from gensim.models import LdaModel"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ba13e449-2fd0-4be0-9a1c-0bebfd1fc18d",
+   "id": "46bc85b5-503c-4902-99d7-34ef982f51f8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dictionary = Dictionary(positive_list)\n",
+    "dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ba13e449-2fd0-4be0-9a1c-0bebfd1fc18d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dictionary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dictionary\u001b[38;5;241m.\u001b[39mtoken2id\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dictionary' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary.token2id"
+   ]
   },
   {
    "cell_type": "markdown",
