혜인 리드미 완성

--- a/codes/LDA/hyein_LDA.ipynb
+++ b/codes/LDA/hyein_LDA.ipynb
@@ -766,6 +766,10 @@
    "execution_count": 14,
    "id": "ba13e449-2fd0-4be0-9a1c-0bebfd1fc18d",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1789,6 +1793,10 @@
    "execution_count": 15,
    "id": "0cfb9ed9-7489-4b64-8816-5d03f35c1abc",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2812,6 +2820,10 @@
    "execution_count": 16,
    "id": "38b839bc-81e1-4f04-9336-db49098ea6ca",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2859,6 +2871,10 @@
    "execution_count": 17,
    "id": "df9bba2a-f71c-46df-8125-9524986e89c2",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -3521,7 +3537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "id": "f205d051-44f4-468c-924e-009f2b054370",
    "metadata": {
     "tags": []
@@ -3607,7 +3623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "id": "b27aa9b3-0c90-40af-976a-a41a4aedc49e",
    "metadata": {},
    "outputs": [],
