--- a/codes/LDA/sentiment_machine(total_data).ipynb
+++ b/codes/LDA/sentiment_machine(total_data).ipynb
@@ -1600,6 +1600,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f480274b-ace4-4751-8b45-1a663b278b19",
+   "metadata": {},
+   "source": [
+    "#### 정형화 단계"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a6306c1f-b6e7-4605-92ef-c2dd4fd20835",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6c46e242-1e3b-421f-a052-e1c8847d381e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m features_train, features_test, target_train, target_test \u001b[38;5;241m=\u001b[39m train_test_split(features, target, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m111\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m features_train\u001b[38;5;241m.\u001b[39mshape, target_train\u001b[38;5;241m.\u001b[39mshape, features_test\u001b[38;5;241m.\u001b[39mshape, target_test\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "features_train, features_test, target_train, target_test = train_test_split(features, target, random_state=111)\n",
+    "features_train.shape, target_train.shape, features_test.shape, target_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc7c0423-6a7d-45bd-85d7-2b7ad9ebbdae",
    "metadata": {},
    "source": [
@@ -1647,7 +1692,98 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d926c7c-cbf2-4d5a-a5f9-706aa35a4165",
+   "id": "fa96c293-74dc-4956-976a-489e4e87cb90",
+   "metadata": {},
+   "source": [
+    "#### 머신러닝 평가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30a27f93-6c6f-4efa-b5a3-720a1768a2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_train_predict = model.predict(features_train)\n",
+    "target_train_predict.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef43d292-9050-4c54-9da8-6b93af3846bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9ab1bc8-f59b-4f58-8e50-58b28f9a15ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 정확도 평가 (실제값, 예측값을 넣으면 정확도가 평가된다)\n",
+    "accuracy_score(target_train, target_train_predict)  # 교내 시험"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b02792dd-0d72-4c0b-84c9-7e78100e66c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_test_predict = model.predict(features_test)\n",
+    "target_test_predict.shape   # target_test.shape과 동일"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f0a732c-22ab-4184-90cf-f71fb7065709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_score(target_test, target_test_predict)   # 교외 시험"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "799dc7c9-261f-46af-84d0-3332ae264232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba1836a7-133a-474b-9a3f-9f339e5540d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(target_train, target_train_predict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b72fbcd6-4e67-4aaa-b000-9f1dde4d9407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(target_test, target_test_predict))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6c41c35-277d-4009-a700-447a7e5cb843",
    "metadata": {},
    "source": [
     "#### 서비스 배포(머신러닝)"
@@ -1662,9 +1798,9 @@
    },
    "outputs": [],
    "source": [
-    "with open('../../datasets/sentiment_machine.pkl', 'wb') as sentiment_machine_file:\n",
-    "    pickle.dump(obj=model, file=sentiment_machine_file)\n",
-    "    pass"
+    "# with open('../../datasets/sentiment_machine.pkl', 'wb') as sentiment_machine_file:\n",
+    "#     pickle.dump(obj=model, file=sentiment_machine_file)\n",
+    "#     pass"
    ]
   }
  ],
